advanced/src/oke/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starter-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
    # nginx.ingress.kubernetes.io/affinity: "cookie"   
    # nginx.ingress.kubernetes.io/session-cookie-path: "/"    
spec:
  ingressClassName: nginx    
  rules:
    - http:    
        paths:
          - path: /starter(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: starter-ui-service
                port:
                  number: 80
